tests/baselines/reference/importDeclWithDeclareModifierInAmbientContext.errors.txt
importDeclWithDeclareModifierInAmbientContext.ts(2,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importDeclWithDeclareModifierInAmbientContext.ts(6,5): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== importDeclWithDeclareModifierInAmbientContext.ts (2 errors) ====
    declare module "m" {
        module x {
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            interface c {
            }
        }
        declare export import a = x.c;
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
        var b: a;
    }
    